--- a/public/css/index-styles.css
+++ b/public/css/index-styles.css
@@ -7,6 +7,17 @@
     --main-turquesa: #3ACACE;
 }
 
+/*Cuando se use en otras vistas simplemente cambiar el color de fondo*/
+.drop-filler{
+    background-color: var(--main-azul-claro);
+    grid-row: 2 / span 2;
+    width: 100vw;
+    grid-column: 1 / -1;
+    position: relative;
+    left: calc(-50vw + 50%);
+}
+
+
 .main-container{
     width: 100vw;
     height: 85vh;
