--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -38,7 +38,8 @@
     margin-right: -20px;
   }
   
-  .logo > h1{
+  .logo > a{ text-decoration: none;}
+  .logo > a > h1{
     font-size: 36px;
     font-family: 'Rubik', sans-serif;
     font-weight: bold;
@@ -62,7 +63,8 @@
     border-radius: 6px 0px 0px 0px;
   }
   
-  .logoDrop > h1{
+  .logoDrop > a {text-decoration: none;}
+  .logoDrop > a > h1{
     font-size: 36px;
     font-family: 'Rubik', sans-serif;
     font-weight: bold;
