--- a/public/css/student/student-index.css
+++ b/public/css/student/student-index.css
@@ -24,10 +24,51 @@ Cuando se use en otras vistas simplemente cambiar el color de fondo
     background-color: var(--main-gris);
     
     display: flex;
-    justify-content: center;
+    flex-direction: column;
 }
 
+/*añadir animacion de que viene desde arriba y que desaparezca despues de 5 segundos*/
+#statusCode{
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    width: 83vw;
+
+    padding: 15px;
+    margin: 10px;
+
+    background-color: var(--main-turquesa);
+    border-radius: 8px;
+
+    font-family: 'Rubik', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: #fff;
+
+    animation-delay: 1s;
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
+    animation-name: fadeInArriba;
+}
+
+@keyframes fadeInArriba {
+	from{
+        opacity: 1;
+		transform: translate3d(0, 0, 0);
+	}
+
+	to{
+        opacity: 0;
+        padding: 0%;
+        margin: 0%;
+        transform: translate3d(0, -10%, 0);
+    }
+    
+}
+
+
 #students-table {
+    align-self: center;
     font-family: 'Rubik', sans-serif;
     border-collapse: collapse;
     width: 85vw;
