--- a/public/css/signup-styles.css
+++ b/public/css/signup-styles.css
@@ -87,6 +87,7 @@ Cuando se use en otras vistas simplemente cambiar el color de fondo
     color: var(--main-morado);
 
     /*white-space: nowrap;*/
+    word-break: break-all;
 }
 
 label{
