--- a/public/css/student/student-detail.css
+++ b/public/css/student/student-detail.css
@@ -124,6 +124,14 @@ label{
     box-sizing: border-box;
 }
 
+.puntuation_data{
+    font-size: 60px;
+    font-family: 'Roboto';
+    font-weight: bold;
+    color: #fff;
+    padding: 0px 20px;
+}
+
 .puntuation > label{
     color: #fff;
 }
