Mejorado detalle de grupo

--- a/public/css/group/group-detail.css
+++ b/public/css/group/group-detail.css
@@ -94,6 +94,8 @@ Cuando se use en otras vistas simplemente cambiar el color de fondo
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 20px;
+
+    width: 100%;
 }
 
 .group-student{
