--- a/public/css/group/group-detail.css
+++ b/public/css/group/group-detail.css
@@ -86,6 +86,8 @@ Cuando se use en otras vistas simplemente cambiar el color de fondo
     font-size: 1em;
     box-sizing: border-box;
     padding: 20px;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .group-integrantes{
