--- a/public/css/student/student-detail.css
+++ b/public/css/student/student-detail.css
@@ -169,7 +169,7 @@ label{
     padding: 35px 20px;
     margin: 20px;
 
-    min-width: 40%;
+    width: 40%;
     justify-content: space-evenly;
     
     font-family: 'Roboto', sans-serif;
