--- a/public/css/user/user-detail.css
+++ b/public/css/user/user-detail.css
@@ -27,7 +27,7 @@ Cuando se use en otras vistas simplemente cambiar el color de fondo
     justify-content: center;
 }
 
-.student-container{
+.user-container{
     width: 75vw;
 
     display: grid;
@@ -163,19 +163,19 @@ label{
 
 .group_card{
     display: flex;
+    width: 40%;
+    justify-content: space-evenly;
 
     background-color: rgba(255,255,255,0.7);
     border-radius: 15px;
     padding: 35px 20px;
     margin: 20px;
-
-    width: 40%;
-    justify-content: space-evenly;
     
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
     font-size: 28px;
 
+    cursor: pointer;
     color: var(--main-gris-oscuro);
 }
 
@@ -183,7 +183,7 @@ label{
     /*background-image: url(../../imgs/default-user-image.png);*/
     background-repeat: no-repeat;
     background-size: contain;
-    width: 150px;
+    min-width: 150px;
     height: 150px;
     border-radius: 50%;
 
@@ -203,8 +203,16 @@ label{
     color: #7D7D7D;
 }
 
+@media (max-width: 1600px) {
+    .group_card{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+}
+
 @media (max-width: 1300px) {
-    .student-container{
+    .user-container{
         grid-template-columns: 1fr;
         grid-template-rows: repeat(7, 0fr);
         grid-template-areas: "foto"
@@ -227,6 +235,7 @@ label{
     .puntuation{
         margin: 0px;
     }
+
 }
 
 
