--- a/public/css/login-styles.css
+++ b/public/css/login-styles.css
@@ -12,6 +12,9 @@ body{
     background-color: var(--main-gris);
 }
 
+.main-container{
+    width: 100%;
+}
 
 .divs-container {
     background-color: var(--main-gris);
@@ -58,7 +61,7 @@ a:link{
 
 .login-box{
     grid-area: login;
-    width: 60%;
+    width: 50%;
 
     display: flex;
     align-items: center;
@@ -80,10 +83,6 @@ a:link{
     flex-direction: column;
 }
 
-.login-box form > * {
-    padding: 10px;
-}
-
 .login-box h1{
     font-family: 'Roboto';
     font-weight: bold;
@@ -96,8 +95,7 @@ a:link{
     font-weight: normal;
     font-size: 25px;
     color: rgba(94, 94, 94, 0.8);
-    padding: 5px;
-    margin-bottom: 5px;
+    padding: 10px 0px;
 }
 
 .login-box input {
@@ -128,8 +126,6 @@ a:link{
     border-radius: 10px;
     text-decoration:none;
     align-self: center;
-
-    margin-top: 15px;
 }
 
 .button:hover{
@@ -167,8 +163,50 @@ a:link{
     color: rgba(0, 32, 74, 0.7);
 }
 
+.error_message{
+    background-color: #c00;
+    border-radius: 4px;
 
+    padding: 10px;
+    margin-top: 10px;
+    
+    font-family: 'Rubik';
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+}
 
+/* Oculto la checkbox original*/
+.remember-box input[type=checkbox] {
+    display: none;
+}
+
+/* Dibujo una custom check box */
+.remember-box {line-height: 20px; margin: 20px 0px;}
+.remember-box label {cursor: pointer;}
+.remember-box label:after {
+    display: inline-block;
+    width: 20px;
+    margin-left: 10px;
+    content: "\00a0";
+    text-align: center;
+
+    font-size: 20px;
+    padding: 5px;
+    background: #ccc;
+}
+
+.remember-box label:hover:after{
+    background: #bbb;
+}
+
+.remember-box input:checked ~ label::after {
+    content: "\f00c";
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900; 
+    background: #3f6cb5;
+    color: #fff;
+}
 
 @media (max-width: 1400px) {
     .divs-container {
